@@ -1,3 +1,8 @@
+2008-12-02  Badlop  <badlop@process-one.net>
+
+	* src/mod_muc_admin.erl: Include mod_muc_room.hrl
+	* README.txt: Likewise
+
 2008-11-17  Badlop  <badlop@process-one.net>
 
 	* src/mod_muc_admin.erl: Fix include of web hrl (thanks to Johnny)
